<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_simple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"

    android:orientation="vertical"
    tools:ignore="HardcodedText">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/sun" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:background="@color/tilesColor">

                    <TextView
                        android:id="@+id/wschodLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wschod"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/wschodCzasInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/wschodAzymutInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:background="@color/tilesColor">

                    <TextView
                        android:id="@+id/zachodLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zachod"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/zachodCzasInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/zachodAzymutInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:background="@color/tilesColor">

                    <TextView
                        android:id="@+id/zmierzchLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/zmierzch"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/zmierzchInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="TextView"
                        android:textAlignment="center" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:background="@color/tilesColor">

                    <TextView
                        android:id="@+id/switLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.34"
                        android:text="@string/swit"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/switInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="TextView"
                        android:textAlignment="center" />


                </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>

