<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_simple"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorMoon"

    android:orientation="vertical"
    tools:ignore="HardcodedText">


    <ImageView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:fitsSystemWindows="false"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="w,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_night" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="166dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/banner"
        app:layout_constraintDimensionRatio="w,400:576"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintVertical_bias="0.52"
        app:srcCompat="@drawable/moon" />


    <TextClock
        android:id="@+id/data_czas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:format12Hour="HH:mm:ss"
        android:format24Hour="HH:mm:ss"
        android:paddingLeft="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/banner" />


    <TextView
        android:id="@+id/wspolrzedne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/data_czas"
        tools:text="Text2" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/tilesColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/wschodLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wschod"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/wschodCzasInput"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/wschodCzasInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/wschodLabel"
                tools:ignore="MissingConstraints" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/tilesColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/zachodLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/zachod"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/zachodCzasInput"
                app:layout_constraintEnd_toStartOf="@+id/zachodCzasInput"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/zachodCzasInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/zachodLabel"
                tools:ignore="MissingConstraints" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/tilesColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <TextView
                android:id="@+id/nowLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/now"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/nowInput"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/nowInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nowLabel"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="3dp" />


        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/tilesColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/pelniaLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:text="@string/pelnia"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/pelniaInput"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/pelniaInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/pelniaLabel"
                tools:ignore="MissingConstraints" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:background="@color/tilesColor"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <TextView
                android:id="@+id/fazaLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/faza"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/fazaInput"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/fazaInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fazaLabel"
                tools:ignore="MissingConstraints" />


        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:background="@color/tilesColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <TextView
                android:id="@+id/synoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/syno"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/synoInput"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/synoInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/synoLabel"
                tools:ignore="MissingConstraints" />


        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>

